# mg-server

./: .gitignore  Cargo.toml  Cargo.toml~  LICENSE  README.md
content/drafts/: blog-draft-mg-server.md
content/posts/: memory-safety-c-vs-rust.md  port-scanner-in-rust.md
src/: errors.rs  errors.rs~  main.rs  main.rs~  router.rs  router.rs~
src/handlers/: blog.rs  mod.rs  pages.rs
src/middleware/: mod.rs  rate_limit.rs  rate_limit.rs~  security_headers.rs
src/models/: mod.rs  post.rs  project.rs  project.rs~
static/css/: style.css
static/js/: main.js
templates/: about.html  base.html  blog_list.html  blog_post.html  error_404.html  error_500.html  index.html  portfolio.html  portfolio.html~
