[package]
name = "mg-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
askama = "0.12"
askama_axum = "0.4"

pulldown-cmark = "0.10"
gray_matter ="0.2"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"

serde = { version = "1", features = ["derive"] }

governor = "0.6"
axum-client-ip = "0.5"
