[package]
name = "mg-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# tokio features = ["full"] enables all Tokio components:
# rt-multi-thread (thread pool), net (TCP/UDP), fs (async file I/O), etc.
# In production you'd list only what you use — "full" is fine for learning.
axum = "0.7"
tokio = { version = "1", features = ["full"] }

# tower-http features: "fs" for ServeDir static file serving, "trace" for TraceLayer logging.
# Other available features: compression, cors, auth — add as needed.
tower-http = { version = "0.5", features = ["fs", "trace"] }
tracing = "0.1"

# tracing-subscriber features:
# "env-filter" — enables RUST_LOG environment variable control (required for EnvFilter)
# "fmt"        — enables the formatted console output subscriber
# Without these feature flags, EnvFilter and fmt::init() do not compile.
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
askama = "0.12"
askama_axum = "0.4"

pulldown-cmark = "0.10"
gray_matter ="0.2"

# chrono features: "serde" enables Serialize/Deserialize for date types.
# Needed if you ever serialize BlogPost to JSON (Phase 3 API).
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"

# serde features: "derive" enables #[derive(Serialize, Deserialize)] on your structs.
# Without "derive", you must implement the traits manually — never do this.
serde = { version = "1", features = ["derive"] }

governor = "0.6"
axum-client-ip = "0.5"
